--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -32,6 +32,25 @@
   "DiscountTotal" : "Discount Total",
   "AfterDiscount" : "After Discount",
   "Checkout" : "Save",
+  "MyOrder" : "My Order",
   "Sorry" : "Sorry",
-  "SorryDetails" : "There is no item have this barcode"
+  "SorryDetails" : "There is no item have this barcode",
+  "OrderDetails": "Order Details",
+  "States": "States",
+  "approved": "Approved",
+  "waiting": "Waiting",
+  "rejected": "Rejected",
+  "All" : "All",
+  "SalesInvoice": "Sales Invoice",
+  "SalesInvoiceDetails": "Sales Invoice Details",
+  "Home": "Home",
+  "MyOrders": "My Orders",
+  "Languages": "Languages",
+  "From" : "From",
+  "To":"To",
+  "FilterDate": "Get Data Based On Date",
+  "Orderby": "Order by",
+  "OrderState": "Order State",
+  "FilteStates": "Get Date Based On States",
+  "SalesInvoicein": "Sales Invoice in"
 }
